[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"


[project]
name        = "roman-xmatch"
version     = "0.1.0"
description = "Cross-correlate Nancy Grace Roman Space Telescope survey footprints with astronomical catalogs"
readme      = "README.md"
license     = { text = "MIT" }
requires-python = ">=3.10"

keywords = [
    "astronomy",
    "roman",
    "space-telescope",
    "footprint",
    "cross-match",
    "catalogs",
    "HEALPix",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "astropy>=5.3",
    "astroquery>=0.4.6",
    "numpy>=1.24",
    "pandas>=1.5",
    "streamlit>=1.30",
    # healpy is optional (HEALPix mask file support); install separately if needed
]


[project.optional-dependencies]
healpix = ["healpy>=1.16"]
dev     = [
    "pytest>=7",
    "pytest-cov",
    "ruff",
    "mypy",
]


[project.scripts]
roman-xmatch = "roman_xmatch.cli:main"


[project.urls]
Homepage   = "https://github.com/YOUR_USERNAME/roman-xmatch"
Repository = "https://github.com/YOUR_USERNAME/roman-xmatch"
Issues     = "https://github.com/YOUR_USERNAME/roman-xmatch/issues"


[tool.hatch.build.targets.wheel]
packages = ["roman_xmatch"]


[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
